--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "postinstall": "npm run prestart:prod",
+    "prestart:prod": "rimraf dist && npm run build",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
